--- a/css/style.css
+++ b/css/style.css
@@ -436,3 +436,37 @@ body {
   background-color: #f16d7f;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+
+/* CATALOGUE PAGE */
+
+/* PAGE HEADING SECTION */
+.page__heading {
+  background-color: #f8f3f4;
+}
+.heading__container {
+  padding: 60px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.heading__container h1 {
+  font: normal 24px/29px Lato;
+  color: #f16d7f;
+  text-transform: uppercase;
+}
+.heading__breadcrumbs {
+  display: flex;
+}
+.heading__breadcrumbs_item:not(:last-child)::after {
+  content: "/";
+}
+.heading__breadcrumbs_link {
+  font: normal 14px/17px Lato;
+  color: #636363;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+.heading__breadcrumbs_link.active {
+  font: 700 14px/17px Lato;
+  color: #f16d7f;
+}
