End of work on the Desktop version

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,6 @@ body {
   max-width: 1140px;
   width: 100%;
   margin: 0 auto;
-  outline: 1px solid #eee;
 }
 
 /* HEADER */
@@ -401,6 +400,7 @@ body {
   color: #222;
 }
 .subscribe__input {
+  display: flex;
   background: #e1e1e1;
   border-radius: 20px;
 }
@@ -413,6 +413,13 @@ body {
   border-radius: 20px 0 0 20px;
   border: none;
   height: 49px;
+}
+.subscribe__input input[type="email"]:focus {
+  color: #fff;
+  background: #000;
+}
+.subscribe__input input[type="email"]:focus::placeholder {
+  color: #fff;
 }
 .subscribe__input input[type="submit"] {
   width: 100px;
@@ -434,7 +441,6 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  outline: 1px solid #eee;
 }
 .copyright {
   font: 400 16px/19px Lato;
@@ -850,7 +856,7 @@ input[type="checkbox"]:hover,
   min-height: 306px;
 }
 .purchase__item__image:nth-child(1) {
-  background-image: url(../images/featuresimage_3.jpg);
+  background-image: url(../images/featuresImage_3.jpg);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top left;
@@ -886,11 +892,22 @@ input[type="checkbox"]:hover,
   width: 36px;
   font-size: 16px;
 }
-.purchase__item__close {
+.purchase__item {
   cursor: pointer;
   top: 28px;
   right: 22px;
+}
+.close {
+  cursor: pointer;
+  background: url(../images/svg/close.svg);
+  height: 18px;
+  width: 18px;
+}
+.purchase__item.close {
   position: absolute;
+  top: 28px;
+  right: 22px;
+  box-shadow: none;
 }
 .purchase__buttons {
   display: flex;
@@ -1000,10 +1017,11 @@ input[type="checkbox"]:hover,
 .registration__text {
   padding: 64px 0 0 0;
 }
-.registration__user input[type="text"],
-.registration__user input[type="email"],
-.registration__user input[type="password"] {
+.registration__user input {
   padding: 16px;
+}
+.registration__user input:focus {
+  border: 1px solid #ef5b70;
 }
 .user__info,
 .user__login {
